results/SpecGenBench/conversational/log-TransposeMatrix-2023_11_29_16_58_25.txt
public class TransposeMatrix {
    //@ requires matrix != null && (\forall int i; 0 <= i && i < matrix.length; matrix[i] != null);
    //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i].length == matrix[0].length);
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != null);
    //@ ensures (\forall int i; 0 <= i && i < \result.length; \result[i].length == matrix.length);
    //@ ensures (\forall int i; 0 <= i && i < matrix.length; (\forall int j; 0 <= j && j < matrix[i].length; \result[j][i] == matrix[i][j]));
    public int[][] transposeMat(int[][] matrix)
    {
        int m, n, p, q;
        m = matrix.length;
        n = matrix[0].length;
        int[][] transpose = new int[n][m];

        for (int c = 0; c < n; c++) {

            for (int d = 0; d < m; d++) {
                transpose[c][d] = matrix[d][c];
            }

        }
        return transpose;
    }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:17: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                transpose[c][d] = matrix[d][c];
                          ^
  Reason: Double rewriting of ident: c c_771_771___33 c_771_785___36
1 error

public class TransposeMatrix {
    //@ requires matrix != null && (\forall int i; 0 <= i && i < matrix.length; matrix[i] != null);
    //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i].length == matrix[0].length);
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != null);
    //@ ensures (\forall int i; 0 <= i && i < \result.length; \result[i].length == matrix.length);
    //@ ensures (\forall int i; 0 <= i && i < matrix.length; (\forall int j; 0 <= j && j < matrix[i].length; \result[j][i] == matrix[i][j]));
    public int[][] transposeMat(int[][] matrix) {
        int m = matrix.length;
        int n = matrix[0].length;
        int[][] transpose = new int[n][m];

        for (int c = 0; c < n; c++) {
            for (int d = 0; d < m; d++) {
                transpose[c][d] = matrix[d][c];
            }
        }
        return transpose;
    }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:14: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                transpose[c][d] = matrix[d][c];
                          ^
  Reason: Double rewriting of ident: c c_751_751___29 c_751_765___32
1 error

public class TransposeMatrix {
    //@ requires matrix != null && (\forall int i; 0 <= i && i < matrix.length; matrix[i] != null);
    //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i].length == matrix[0].length);
    //@ ensures \result != null && (\forall int i; 0 <= i && i < \result.length; \result[i] != null);
    //@ ensures (\forall int i; 0 <= i && i < \result.length; \result[i].length == matrix.length);
    //@ ensures (\forall int i; 0 <= i && i < matrix.length; (\forall int j; 0 <= j && j < matrix[i].length; \result[j][i] == matrix[i][j]));
    public int[][] transposeMat(int[][] matrix) {
        int m = matrix.length;
        int n = matrix[0].length;
        int[][] transpose = new int[n][m];

        for (int c = 0; c < n; c++) {
            for (int d = 0; d < m; d++) {
                transpose[c][d] = matrix[d][c];
            }
        }
        return transpose;
    }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:14: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                transpose[c][d] = matrix[d][c];
                          ^
  Reason: Double rewriting of ident: c c_751_751___29 c_751_765___32
1 error

